crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__recovery__normalizes_package_import_spacing.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
package   com.example
import z.Z
import a.A
class Demo

syntax:
syntax:
KotlinFile
  PackageHeader
    PackageKw "package" @ 0..7 trailing=[Whitespace "   "]
    QualifiedName
      Name
        Identifier "com" @ 10..13
      Dot "." @ 13..14
      Name
        Identifier "example" @ 14..21
  ImportList
    ImportDirective
      Identifier "import" @ 22..28 leading=[Newline "\n"] trailing=[Whitespace " "]
      QualifiedName
        Name
          Identifier "z" @ 29..30
        Dot "." @ 30..31
        Name
          Identifier "Z" @ 31..32
    ImportDirective
      Identifier "import" @ 33..39 leading=[Newline "\n"] trailing=[Whitespace " "]
      QualifiedName
        Name
          Identifier "a" @ 40..41
        Dot "." @ 41..42
        Name
          Identifier "A" @ 42..43
  ClassDeclaration
    ClassKw "class" @ 44..49 leading=[Newline "\n"] trailing=[Whitespace " "]
    Name
      Identifier "Demo" @ 50..54
  Eof "" @ 55..55 leading=[Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
