crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__recovery__object_delegation.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
val value = object : First, /* orphan */ , Second {}

syntax:
syntax:
KotlinFile
  AnnotationList
  ImportList
    ImportDirectiveList
  KotlinFileItemList
    PropertyDeclaration
      ModifierListSequence
      ModifierListSequence
      ValKw "val" @ 0..3 trailing=[Whitespace " "]
      CallableName
        CallableNamePartList
          Name
            Identifier "value" @ 4..9 trailing=[Whitespace " "]
      Assign "=" @ 10..11 trailing=[Whitespace " "]
      BinaryExpression
        ObjectExpression
          ObjectKw "object" @ 12..18 trailing=[Whitespace " "]
          Colon ":" @ 19..20 trailing=[Whitespace " "]
          DelegationSpecifierList
            DelegationSpecifierSeparatedList
              DelegationSpecifier
                TypeReference
                  UserType
                    UserTypeSegmentList
                      Identifier "First" @ 21..26
              Comma "," @ 26..27 trailing=[Whitespace " ", BlockComment "/* orphan */", Whitespace " "]
              DelegationSpecifier
                TypeReference
                  ErrorNode
              Comma "," @ 41..42 trailing=[Whitespace " "]
        Identifier "Second" @ 43..49 trailing=[Whitespace " "]
        LambdaExpression
          LambdaBody
            LBrace "{" @ 50..51
            LambdaBodyItemList
            RBrace "}" @ 51..52
      PropertyBodyMemberList
  Eof "" @ 53..53 leading=[Newline "\n"]

diagnostics:
  code=kotlin.parse.expected_syntax severity=Error stage=Parser range=41..42 message="expected type"
  code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=41..42 message="expected delegation specifier"

diagnostics:
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(41), end: TextSize(42) }) message=expected type
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(41), end: TextSize(42) }) message=expected delegation specifier
