crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__recovery__preserves_file_annotation_preamble.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
@file:Suppress("unused")

package sample

class Demo

syntax:
syntax:
KotlinFile
  AnnotationList
    Annotation
      At "@" @ 0..1
      AnnotationUseSiteTarget
        Identifier "file" @ 1..5
        Colon ":" @ 5..6
      QualifiedName
        QualifiedNameSegmentList
          Name
            Identifier "Suppress" @ 6..14
      AnnotationArgumentList
        LParen "(" @ 14..15
        ValueArgumentSeparatedList
          ValueArgument
            ValueArgumentPrefixList
            StringTemplateExpression
              StringTemplateEntryList
                StringTemplateEntry
                  OpenQuote "\"" @ 15..16
                StringTemplateEntry
                  RegularStringPart "unused" @ 16..22
              ClosingQuote "\"" @ 22..23
        RParen ")" @ 23..24
  PackageHeader
    PackageKw "package" @ 26..33 leading=[Newline "\n", Newline "\n"] trailing=[Whitespace " "]
    QualifiedName
      QualifiedNameSegmentList
        Name
          Identifier "sample" @ 34..40
    TerminatorList
  ImportDirectiveList
  KotlinFileItemList
    ClassDeclaration
      ModifierList
      ModifierList
      ClassKw "class" @ 42..47 leading=[Newline "\n", Newline "\n"] trailing=[Whitespace " "]
      Name
        Identifier "Demo" @ 48..52
  Eof "" @ 53..53 leading=[Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
