crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__recovery__program.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
package first
import z.Z
package second
import z.Z
import
import b.B
import a.A
class BeforeLateImport
import c.C

package
package broken..name.
import
import direct*
import broken..name.*
import aliased.Name as
import suffix.Name unexpected suffix
}

syntax:
syntax:
KotlinFile
  AnnotationList
  KotlinFileItemList
    PackageHeader
      PackageKw "package" @ 0..7 trailing=[Whitespace " "]
      QualifiedName
        QualifiedNameSegmentList
          Name
            Identifier "first" @ 8..13
      TerminatorList
    ImportDirectiveList
      ImportDirective
        Identifier "import" @ 14..20 leading=[Newline "\n"] trailing=[Whitespace " "]
        QualifiedName
          QualifiedNameSegmentList
            Name
              Identifier "z" @ 21..22
            Dot "." @ 22..23
            Name
              Identifier "Z" @ 23..24
        TerminatorList
    PackageHeader
      PackageKw "package" @ 25..32 leading=[Newline "\n"] trailing=[Whitespace " "]
      QualifiedName
        QualifiedNameSegmentList
          Name
            Identifier "second" @ 33..39
      TerminatorList
    ImportDirectiveList
      ImportDirective
        Identifier "import" @ 40..46 leading=[Newline "\n"] trailing=[Whitespace " "]
        QualifiedName
          QualifiedNameSegmentList
            Name
              Identifier "z" @ 47..48
            Dot "." @ 48..49
            Name
              Identifier "Z" @ 49..50
        TerminatorList
      ImportDirective
        Identifier "import" @ 51..57 leading=[Newline "\n"]
        QualifiedName
          QualifiedNameSegmentList
            Name
        TerminatorList
      ImportDirective
        Identifier "import" @ 58..64 leading=[Newline "\n"] trailing=[Whitespace " "]
        QualifiedName
          QualifiedNameSegmentList
            Name
              Identifier "b" @ 65..66
            Dot "." @ 66..67
            Name
              Identifier "B" @ 67..68
        TerminatorList
      ImportDirective
        Identifier "import" @ 69..75 leading=[Newline "\n"] trailing=[Whitespace " "]
        QualifiedName
          QualifiedNameSegmentList
            Name
              Identifier "a" @ 76..77
            Dot "." @ 77..78
            Name
              Identifier "A" @ 78..79
        TerminatorList
    ClassDeclaration
      ModifierList
      ModifierList
      ClassKw "class" @ 80..85 leading=[Newline "\n"] trailing=[Whitespace " "]
      Name
        Identifier "BeforeLateImport" @ 86..102
    ImportDirectiveList
      ImportDirective
        Identifier "import" @ 103..109 leading=[Newline "\n"] trailing=[Whitespace " "]
        QualifiedName
          QualifiedNameSegmentList
            Name
              Identifier "c" @ 110..111
            Dot "." @ 111..112
            Name
              Identifier "C" @ 112..113
        TerminatorList
    PackageHeader
      PackageKw "package" @ 115..122 leading=[Newline "\n", Newline "\n"]
      QualifiedName
        QualifiedNameSegmentList
          Name
      TerminatorList
    PackageHeader
      PackageKw "package" @ 123..130 leading=[Newline "\n"] trailing=[Whitespace " "]
      QualifiedName
        QualifiedNameSegmentList
          Name
            Identifier "broken" @ 131..137
      BogusPackageSuffix
        Range ".." @ 137..139
        Identifier "name" @ 139..143
        Dot "." @ 143..144
      TerminatorList
    ImportDirectiveList
      ImportDirective
        Identifier "import" @ 145..151 leading=[Newline "\n"]
        QualifiedName
          QualifiedNameSegmentList
            Name
        TerminatorList
      ImportDirective
        Identifier "import" @ 152..158 leading=[Newline "\n"] trailing=[Whitespace " "]
        QualifiedName
          QualifiedNameSegmentList
            Name
              Identifier "direct" @ 159..165
        ImportOnDemandSuffix
          Star "*" @ 165..166
        TerminatorList
      ImportDirective
        Identifier "import" @ 167..173 leading=[Newline "\n"] trailing=[Whitespace " "]
        QualifiedName
          QualifiedNameSegmentList
            Name
              Identifier "broken" @ 174..180
        BogusImportSuffix
          Range ".." @ 180..182
          Identifier "name" @ 182..186
          Dot "." @ 186..187
          Star "*" @ 187..188
        TerminatorList
      ImportDirective
        Identifier "import" @ 189..195 leading=[Newline "\n"] trailing=[Whitespace " "]
        QualifiedName
          QualifiedNameSegmentList
            Name
              Identifier "aliased" @ 196..203
            Dot "." @ 203..204
            Name
              Identifier "Name" @ 204..208 trailing=[Whitespace " "]
        ImportAlias
          AsKw "as" @ 209..211
          Name
        TerminatorList
      ImportDirective
        Identifier "import" @ 212..218 leading=[Newline "\n"] trailing=[Whitespace " "]
        QualifiedName
          QualifiedNameSegmentList
            Name
              Identifier "suffix" @ 219..225
            Dot "." @ 225..226
            Name
              Identifier "Name" @ 226..230 trailing=[Whitespace " "]
        BogusImportSuffix
          Identifier "unexpected" @ 231..241 trailing=[Whitespace " "]
          Identifier "suffix" @ 242..248
        TerminatorList
    BogusKotlinFileItem
      RBrace "}" @ 249..250 leading=[Newline "\n"]
  Eof "" @ 251..251 leading=[Newline "\n"]

diagnostics:
  code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=25..32 message="unexpected package header after file header"
  code=kotlin.parse.expected_syntax severity=Error stage=Parser range=58..64 message="expected name"
  code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=103..109 message="unexpected import after file item"
  code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=115..122 message="unexpected package header after file header"
  code=kotlin.parse.expected_syntax severity=Error stage=Parser range=123..130 message="expected name"
  code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=123..130 message="unexpected package header after file header"
  code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=137..139 message="unexpected token in package header"
  code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=145..151 message="unexpected import after file item"
  code=kotlin.parse.expected_syntax severity=Error stage=Parser range=152..158 message="expected name"
  code=kotlin.parse.expected_syntax severity=Error stage=Parser range=165..166 message="expected `.` before import star"
  code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=180..182 message="unexpected token in import directive"
  code=kotlin.parse.expected_syntax severity=Error stage=Parser range=212..218 message="expected name"
  code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=231..241 message="unexpected token in import directive"
  code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=249..250 message="unexpected closing brace at top level"

diagnostics:
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(25), end: TextSize(32) }) message=unexpected package header after file header
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(58), end: TextSize(64) }) message=expected name
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(103), end: TextSize(109) }) message=unexpected import after file item
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(115), end: TextSize(122) }) message=unexpected package header after file header
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(123), end: TextSize(130) }) message=expected name
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(123), end: TextSize(130) }) message=unexpected package header after file header
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(137), end: TextSize(139) }) message=unexpected token in package header
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(145), end: TextSize(151) }) message=unexpected import after file item
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(152), end: TextSize(158) }) message=expected name
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(165), end: TextSize(166) }) message=expected `.` before import star
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(180), end: TextSize(182) }) message=unexpected token in import directive
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(212), end: TextSize(218) }) message=expected name
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(231), end: TextSize(241) }) message=unexpected token in import directive
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(249), end: TextSize(250) }) message=unexpected closing brace at top level
