crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__recovery__property_body_recovered_gap.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
val property: Int +
    get() = 1

syntax:
syntax:
KotlinFile
  AnnotationList
  KotlinFileItemList
    PropertyDeclaration
      ModifierList
      ModifierList
      ValKw "val" @ 0..3 trailing=[Whitespace " "]
      Name
        Identifier "property" @ 4..12
      Colon ":" @ 12..13 trailing=[Whitespace " "]
      TypeReference
        UserType
          UserTypeSegmentList
            UserTypeSegment
              AnnotationList
              Name
                Identifier "Int" @ 14..17 trailing=[Whitespace " "]
      PropertyInitializer
        AssignmentExpression
          ErrorNode
            UnaryExpression
              Plus "+" @ 18..19
              CallExpression
                NameExpression
                  Identifier "get" @ 24..27 leading=[Newline "\n", Whitespace "    "]
                TypeArgumentListList
                ValueArgumentList
                  LParen "(" @ 27..28
                  ValueArgumentEntryList
                  RParen ")" @ 28..29 trailing=[Whitespace " "]
                LambdaExpressionList
          Assign "=" @ 30..31 trailing=[Whitespace " "]
          LiteralExpression
            IntegerLiteral "1" @ 32..33
      PropertyBodyMemberList
  Eof "" @ 34..34 leading=[Newline "\n"]

diagnostics:
  code=kotlin.parse.expected_syntax severity=Error stage=Parser range=18..19 message="expected property initializer operator"
  code=kotlin.parse.invalid_assignment_target severity=Error stage=Parser range=30..31 message="invalid assignment target"

diagnostics:
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(18), end: TextSize(19) }) message=expected property initializer operator
code=kotlin.parse.invalid_assignment_target severity=Error stage=Parser range=Some(TextRange { start: TextSize(30), end: TextSize(31) }) message=invalid assignment target
