crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__recovery__top_level_orphan_token.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
fun topLevelOrphanToken() = Unit
}

syntax:
syntax:
KotlinFile
  AnnotationList
  KotlinFileItemList
    FunctionDeclaration
      ModifierList
      ModifierList
      FunKw "fun" @ 0..3 trailing=[Whitespace " "]
      ModifierList
      Name
        Identifier "topLevelOrphanToken" @ 4..23
      ValueParameterList
        LParen "(" @ 23..24
        ValueParameterSeparatedList
        RParen ")" @ 24..25 trailing=[Whitespace " "]
      ExpressionBody
        Assign "=" @ 26..27 trailing=[Whitespace " "]
        NameExpression
          Identifier "Unit" @ 28..32
    BogusKotlinFileItem
      RBrace "}" @ 33..34 leading=[Newline "\n"]
  Eof "" @ 35..35 leading=[Newline "\n"]

diagnostics:
  code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=33..34 message="unexpected closing brace at top level"

diagnostics:
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(33), end: TextSize(34) }) message=unexpected closing brace at top level
