crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__recovery__type_argument_list.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
fun demo() { call<First, /* orphan */ , Second>() }

syntax:
syntax:
KotlinFile
  AnnotationList
  KotlinFileItemList
    FunctionDeclaration
      ModifierList
      ModifierList
      FunKw "fun" @ 0..3 trailing=[Whitespace " "]
      ModifierList
      Name
        Identifier "demo" @ 4..8
      ValueParameterList
        LParen "(" @ 8..9
        ValueParameterSeparatedList
        RParen ")" @ 9..10 trailing=[Whitespace " "]
      BlockBody
        Block
          LBrace "{" @ 11..12 trailing=[Whitespace " "]
          BlockItemList
            Statement
              ExpressionStatement
                CallExpression
                  NameExpression
                    Identifier "call" @ 13..17
                  TypeArgumentListList
                    TypeArgumentList
                      Lt "<" @ 17..18
                      TypeProjectionSeparatedList
                        TypeReference
                          UserType
                            UserTypeSegmentList
                              UserTypeSegment
                                Identifier "First" @ 18..23
                        Comma "," @ 23..24 trailing=[Whitespace " ", BlockComment "/* orphan */", Whitespace " "]
                        BogusTypeArgument
                        Comma "," @ 38..39 trailing=[Whitespace " "]
                        TypeReference
                          UserType
                            UserTypeSegmentList
                              UserTypeSegment
                                Identifier "Second" @ 40..46
                      Gt ">" @ 46..47
                  ValueArgumentList
                    LParen "(" @ 47..48
                    ValueArgumentEntryList
                    RParen ")" @ 48..49 trailing=[Whitespace " "]
                  LambdaExpressionList
              TerminatorList
          RBrace "}" @ 50..51
  Eof "" @ 52..52 leading=[Newline "\n"]

diagnostics:
  code=kotlin.parse.malformed_type_argument_list severity=Error stage=Parser range=38..39 message="malformed type argument list"

diagnostics:
code=kotlin.parse.malformed_type_argument_list severity=Error stage=Parser range=Some(TextRange { start: TextSize(38), end: TextSize(39) }) message=malformed type argument list
